@startuml database-er-diagram
' Modelo entidad-relacion (PostgreSQL) - AutoFinance
' FK reales solo intra-agregado (credit_simulations -> grace_periods, credit_simulation_costs).
' El cronograma (schedule) y el resumen (summary) son columnas jsonb en credit_simulations, no tablas.
' client_id / vehicle_offer_id: referencias by-id SIN FK (frontera ACL).
' Espejo del diagrama Mermaid en docs/architecture/database-model.md

hide circle
skinparam linetype ortho

entity "dealerships" as deal {
  * id : uuid <<PK>>
  --
  * name : varchar
  * ruc : varchar <<UQ>>
  contact_email : varchar
}

entity "users" as users {
  * id : uuid <<PK>>
  --
  * dealership_id : uuid <<FK>>
  * email : varchar
  * username : varchar
  * password_hash : varchar
}

entity "clients" as clients {
  * id : uuid <<PK>>
  --
  * dealership_id : uuid <<@TenantId>>
  * document_id_type : varchar
  * document_id_number : varchar
  contact_email : varchar
  contact_phone : varchar
  contact_address : varchar
}

entity "vehicle_offers" as offers {
  * id : uuid <<PK>>
  --
  * dealership_id : uuid <<@TenantId>>
  * vehicle_make : varchar
  * vehicle_model : varchar
  * vehicle_year : integer
  * sale_price_amount : numeric(18,2)
  * sale_price_currency : varchar
  plan_name : varchar
}

entity "credit_simulations" as sim {
  * id : uuid <<PK>>
  --
  * dealership_id : uuid <<@TenantId>>
  * client_id : uuid <<by-id, no FK>>
  * vehicle_offer_id : uuid <<by-id, no FK>>
  * rate_value : numeric(18,10)
  * rate_type : varchar
  rate_capitalization : varchar
  * initial_percentage : numeric(18,6)
  * balloon_percentage : numeric(18,6)
  * number_of_installments : integer
  * loan_amount_amount : numeric(18,2)
  * financed_balance_amount : numeric(18,12)
  npv : numeric(18,2)
  periodic_irr : numeric(18,8)
  tcea : numeric(18,6)
  schedule : jsonb <<snapshot cronograma>>
  summary : jsonb <<snapshot totales>>
  * state : varchar
  * version : bigint
}

entity "grace_periods" as grace {
  * credit_simulation_id : uuid <<PK>> <<FK>>
  * period_index : integer <<PK>>
  --
  * grace_type : varchar
}

entity "credit_simulation_costs" as costs {
  * credit_simulation_id : uuid <<PK>> <<FK>>
  * cost_index : integer <<PK>>
  --
  * name : varchar
  * value : numeric(18,10)
  * basis : varchar
  * timing : varchar
  * embedded : boolean
}

' Tenant: dealerships -> users (FK) + clients/offers/sim (@TenantId)
deal ||--o{ users : "tiene (FK)"
deal ||--o{ clients : "tenant"
deal ||--o{ offers : "tenant"
deal ||--o{ sim : "tenant"

' Relaciones intra-agregado (FK real)
sim ||--o{ grace : "tiene (FK)"
sim ||--o{ costs : "tiene (FK)"

' Referencias by-id (sin FK, frontera ACL) -- punteadas
clients ||..o{ sim : "by-id (sin FK)"
offers  ||..o{ sim : "by-id (sin FK)"

@enduml
